--- a/css/popup.css
+++ b/css/popup.css
@@ -237,7 +237,7 @@ button::-moz-focus-inner {
   width: 100%;
   max-width: 900px; }
 
-.mfp-iframe-holder {
+.mfp-iframe-scaler {
   width: 100%;
   height: 0;
   overflow: hidden;
