--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,14 @@ div.demo {
 	margin: 0 auto;
 }
 
+div.demo-top,
+div.demo-bottom {
+	width:100%;
+	float: left;
+	height: 140px;
+	background: rgba( 0,0,0,.9 );
+}
+
 canvas#demo-reel-link {
 	margin-top: -160px;
 }
