--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ img#panel {
 	background: #0047BB;
 	display: block;
 	margin: 0 auto;
-	padding: 0 2em;
+	padding: 2em;
 	position: relative;
 }
 
