--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,8 @@ p.quote {
 	margin: 7px auto 0;
 }
 
-body.video p.quote {
+body.video p.quote,
+body.design p.quote {
 	text-align: right;
 	font-size: 29px;
 	padding: 160px 6px 0;
