--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ div.map {
 	height: 400px;
 }
 
-div#panel-2 {
+body.home div#panel-2 {
 	background-color: rgba(23, 22, 22, 0.95);
 	padding: 60px 0;
 }
