--- a/css/style.css
+++ b/css/style.css
@@ -570,8 +570,13 @@ body.who #panel-2 div.content-2 p {
 	font-size: 26px;
 }
 
+body.who #panel-2 {
+	background-color: rgba(23, 22, 22, 0.95);
+	padding: 60px 0;
+}
+
 body.who div#panel-3 {
-	background-color: rgba( 255, 255, 255, .93 );
+	background-color: rgba( 255, 255, 255, .95 );
 }
 
 canvas#demo,
