--- a/css/style.css
+++ b/css/style.css
@@ -955,3 +955,32 @@ div.quote-container {
 	margin-top: 50px;
 	vertical-align: top;
 }
+
+div.web {
+	background: url(../img/web-bg.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+div.print {
+	background: url(../img/print-bg.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+div.music {
+	background: url(../img/music-bg.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+div.apparel {
+	background: url(../img/apparel-bg.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
