Modular CSS, change margins to flush for design panels

--- a/css/style.css
+++ b/css/style.css
@@ -956,31 +956,26 @@ div.quote-container {
 	vertical-align: top;
 }
 
-div.web {
+div.panel.web,
+div.panel.print,
+div.panel.music,
+div.panel.apparel {
+	-webkit-background-size: 100% auto;
+	-moz-background-size: 100% auto;
+	-o-background-size: 100% auto;
+	background-size: 100% auto;
+	margin-top: 0;
+
+}
+div.panel.web {
 	background: url(../img/web-bg.png) no-repeat;
-	-webkit-background-size: 100% auto;
-	-moz-background-size: 100% auto;
-	-o-background-size: 100% auto;
-	background-size: 100% auto;
 }
-div.print {
+div.panel.print {
 	background: url(../img/print-bg.png) no-repeat;
-	-webkit-background-size: 100% auto;
-	-moz-background-size: 100% auto;
-	-o-background-size: 100% auto;
-	background-size: 100% auto;
 }
-div.music {
+div.panel.music {
 	background: url(../img/music-bg.png) no-repeat;
-	-webkit-background-size: 100% auto;
-	-moz-background-size: 100% auto;
-	-o-background-size: 100% auto;
-	background-size: 100% auto;
 }
-div.apparel {
+div.panel.apparel {
 	background: url(../img/apparel-bg.png) no-repeat;
-	-webkit-background-size: 100% auto;
-	-moz-background-size: 100% auto;
-	-o-background-size: 100% auto;
-	background-size: 100% auto;
 }
