No bottom margin necessary

--- a/css/style.css
+++ b/css/style.css
@@ -995,5 +995,5 @@ div.panel.apparel {
 div.web p.scroll {
 	color: black;
 	text-align: center;
-	margin: 13em 1em 13em 0;
+	margin: 13em 1em 0;
 }
