First pass at relative scroll space positioning

--- a/css/style.css
+++ b/css/style.css
@@ -995,5 +995,8 @@ div.panel.apparel {
 div.web p.scroll {
 	color: black;
 	text-align: center;
-	margin: 13em 1em 0;
+}
+
+div.web .scroll-space {
+	margin: 35.5% 1em 0;
 }
