Redux the scroll space relativeness now that we're setting a fixed width dynamically

--- a/css/style.css
+++ b/css/style.css
@@ -1002,5 +1002,7 @@ div.web div.panel-container {
 }
 
 div.web .scroll-space {
-	margin: -.4em 1em 0;
+	margin: 0 auto;
+	position: relative;
+	right: 2%;
 }
