First pass at first scroller on apparel pane.  Not responsive, just large HD screen so far

--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,7 @@ div.panel.apparel {
 	margin-top: 0;
 
 }
+
 div.panel.web {
 	background: url(../img/web-bg.png) no-repeat;
 	-webkit-background-size: 100% auto;
@@ -970,6 +971,7 @@ div.panel.web {
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
 }
+
 div.panel.print {
 	background: url(../img/print-bg.png) no-repeat;
 	-webkit-background-size: 100% auto;
@@ -977,6 +979,7 @@ div.panel.print {
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
 }
+
 div.panel.music {
 	background: url(../img/music-bg.png) no-repeat;
 	-webkit-background-size: 100% auto;
@@ -984,6 +987,7 @@ div.panel.music {
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
 }
+
 div.panel.apparel {
 	background: url(../img/apparel-bg.png) no-repeat;
 	-webkit-background-size: 100% auto;
@@ -1012,4 +1016,8 @@ div.web .scroll-space {
 div.web .scroll-space img {
 	width: 100%;
 	margin-top: 30%;
+}
+
+div.apparel .scroll-space {
+	margin: 30% 0 0 55%;
 }
