--- a/css/style.css
+++ b/css/style.css
@@ -1006,11 +1006,14 @@ div.web div.panel-container {
 	padding: 4.92% 0 0 0;
 }
 
+div.scroll-space {
+	overflow: auto;
+}
+
 div.web .scroll-space {
 	margin: 0 auto;
 	position: relative;
 	right: 2.2%;
-	overflow: auto;
 }
 
 div.web .scroll-space img {
