--- a/css/style.css
+++ b/css/style.css
@@ -1022,7 +1022,7 @@ div.web .scroll-space img {
 }
 
 div.apparel .scroll-space {
-	margin: 30% 0 0 55%;
+	padding: 30% 0 0 55%;
 }
 
 div.apparel p.scroll {
