--- a/css/style.css
+++ b/css/style.css
@@ -1031,6 +1031,7 @@ div.apparel p.scroll {
 	text-align: center;
 	vertical-align: middle;
 	margin: 0;
+	color: #000;
 }
 
 div.apparel div.panel-container {
