--- a/css/style.css
+++ b/css/style.css
@@ -1023,6 +1023,7 @@ div.web .scroll-space img {
 
 div.apparel .scroll-space img {
 	margin-top: 90%;
+	margin: 90% 0 10% 10%;
 }
 
 div.apparel .scroll-space:nth-child(1) {
