Set second element to proper position

--- a/css/style.css
+++ b/css/style.css
@@ -1032,8 +1032,12 @@ div.apparel .scroll-space {
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
+
 div.apparel .scroll-space:nth-child(1) {
 	left: 55%;
+}
+div.apparel .scroll-space:nth-child(2) {
+	left: 14.75%;
 }
 
 div.apparel p.scroll {
