--- a/css/style.css
+++ b/css/style.css
@@ -1072,3 +1072,13 @@ div.print p {
 	text-align: center;
 	margin-top: 100%;
 }
+
+div.music img {
+	margin: 100% 0 0 0;
+	max-height: 100%;
+}
+
+div.music p {
+	text-align: center;
+	margin-top: 100%;
+}
