Proper margins on H2

--- a/css/style.css
+++ b/css/style.css
@@ -1096,7 +1096,7 @@ body.audio #panel-2 h2 {
 	font-weight: normal;
 	font-size: 108px;
 	font-family: "Didot W02 Roman";
-	margin-top: 0;
+	margin: 0;
 	text-align: center;
 }
 
