--- a/css/style.css
+++ b/css/style.css
@@ -1096,7 +1096,7 @@ body.audio #panel-2 h2 {
 	font-weight: normal;
 	font-size: 108px;
 	font-family: "Didot W02 Roman";
-	margin: 0;
+	margin: 0 0 41px;
 	text-align: center;
 }
 
@@ -1124,7 +1124,6 @@ div.what-we-do h3 {
 }
 
 div.what-we-do p {
-	margin-top: 16px;
+	margin-top: 6px;
 	font-size: 20px;
-
 }
