So, our grids are not as much alike as we thought

--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,10 @@ div.grid-item:before {
 	padding-top: 54.0625%;
 }
 
+body.audio .grid-item:before {
+	padding-top: 60.9%;
+}
+
 .services-container {
 	position: absolute;
 	top: 0;
