--- a/css/responsive.css
+++ b/css/responsive.css
@@ -53,7 +53,7 @@
 }
 
 /* ---------- Standard Laptop Screen ---------- */
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1100px) and (max-width: 1290px) {
 
 	body.audio #panel-3 p {
 		width: 353px;
