--- a/css/style.css
+++ b/css/style.css
@@ -1139,6 +1139,7 @@ div.what-we-do p {
 body.audio #panel-3 p {
 	position: absolute;
 	z-index: 1;
+	margin-right: 5%;
 }
 
 body.audio #panel-3 div.grid-item:nth-child(even) p {
