--- a/css/style.css
+++ b/css/style.css
@@ -1206,3 +1206,9 @@ canvas#studio-gallery-link {
 #arrow {
 	display: none
 }
+
+.mfp-container img {
+	display: block;
+	max-width: 80%;
+	margin: 0 auto;
+}
