--- a/css/style.css
+++ b/css/style.css
@@ -1265,9 +1265,10 @@ canvas#gear-list-link {
 }
 
 #gear-list {
-	background: rgba( 0, 0, 0, .95 );
+	background: rgba( 0, 0, 0, .98 );
 	max-width: 80%;
 	width: 1000px;
+	margin: 0 auto;
 }
 
 .column {
