--- a/css/style.css
+++ b/css/style.css
@@ -1286,3 +1286,13 @@ canvas#gear-list-link {
 .column .chunk {
 	margin: 2em 0;
 }
+
+.audio .services-container {
+	background: -moz-linear-gradient(top, rgba(0,0,0,0) 39%, rgba(0,0,0,0.06) 48%, rgba(0,0,0,0.4) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(39%,rgba(0,0,0,0)), color-stop(48%,rgba(0,0,0,0.06)), color-stop(100%,rgba(0,0,0,0.4))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 39%,rgba(0,0,0,0.06) 48%,rgba(0,0,0,0.4) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, rgba(0,0,0,0) 39%,rgba(0,0,0,0.06) 48%,rgba(0,0,0,0.4) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, rgba(0,0,0,0) 39%,rgba(0,0,0,0.06) 48%,rgba(0,0,0,0.4) 100%); /* IE10+ */
+	background: linear-gradient(to bottom, rgba(0,0,0,0) 39%,rgba(0,0,0,0.06) 48%,rgba(0,0,0,0.4) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#66000000',GradientType=0 ); /* IE6-9 */
+}
