Scroll here spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1304,3 +1304,7 @@ body.audio div#panel-6 {
 	-o-background-size: 100% auto;
 	background-size: 100% auto;
 }
+
+body.audio div#panel-6 div.scroll-space p {
+	text-align: center
+}
