--- a/css/style.css
+++ b/css/style.css
@@ -1338,3 +1338,8 @@ body.audio #panel-7 p.scroll {
 	color: white;
 	text-align: center
 }
+
+body.audio #panel-7 img {
+	display: block;
+	margin: 20% 0;
+}
