--- a/css/style.css
+++ b/css/style.css
@@ -1343,3 +1343,7 @@ body.audio #panel-7 img {
 	display: block;
 	margin: 20% 0;
 }
+
+body.audio #panel-7 .scroll-space:nth-child(n+2) img {
+	margin: 100% 0;
+}
