Hoping this fixes more than it breaks

--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,8 @@ div.img {
 	transition: opacity .25s ease-in-out;
 }
 
-div.img:hover {
+div.img:hover,
+div.grid-item h2:hover {
 	opacity: .5
 }
 
