--- a/css/style.css
+++ b/css/style.css
@@ -1394,6 +1394,6 @@ body.audio #panel-7 .scroll-space:nth-child(n+2) img {
 	z-index: -1;
 }
 
-.audio .full-width {
+.who .full-width {
 	overflow: hidden;
 }
