Increase background opacity from 80% to 90% on gallery overlays

--- a/css/style.css
+++ b/css/style.css
@@ -1400,3 +1400,8 @@ body.audio #panel-7 .scroll-space:nth-child(n+2) img {
 .who .full-width {
 	overflow: hidden;
 }
+
+.mfp-bg {
+	opacity: 0.9;
+	filter: alpha(opacity=90);
+}
