Nav margins as a percentage

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ nav.header ul {
 
 nav.header li {
 	display: inline-block;
-	margin-right: 35px;
+	margin-right: 6%;
 	position: relative;
 	bottom: 87px;
 }
